fixed error message/comment overflow into header

--- a/client/css/screen.css
+++ b/client/css/screen.css
@@ -753,7 +753,6 @@ body.pageslide-open {
   background: white url("") top center;
   background-color: white;
   margin-bottom: 10px;
-  height: 70px;
   position: relative;
   /* For modern browsers */
   /* For IE 6/7 (trigger hasLayout) */
